--- a/_data/sidebars/main_sidebar.yml
+++ b/_data/sidebars/main_sidebar.yml
@@ -5,7 +5,7 @@ entries:
   levels: one
   folders:
 
-  - title: Products
+  - title: Easy Trips Product Guide
     output: web
     folderitems:
     - title: Home
@@ -14,13 +14,7 @@ entries:
     - title: News
       url: /news/
       output: web
-    - title: Theme instructions
-      url: /mydoc_introduction/
-      output: web
-    - title: Product 1
-      url: /p1_landing_page/
-      output: web
-    - title: Product 2
-      url: /p2_landing_page/
+    - title: Knowledge base start
+      url: /easytrips_introduction/
       output: web
 
