--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -28,10 +28,6 @@ entries:
       type: homepage
       output: web, pdf
 
-    - title: 5.0 Release notes
-      url: /mydoc_release_notes_50/
-      output: web, pdf
-
     - title: Introduction
       url: /mydoc_introduction/
       output: web, pdf
@@ -40,61 +36,14 @@ entries:
       url: /mydoc_supported_features/
       output: web, pdf
 
-    - title: About the theme author
-      url: /mydoc_about/
-      output: web, pdf
-
     - title: Support
       url: /mydoc_support/
       output: web, pdf
-
-  - title: Installation
-    output: web, pdf
-    folderitems:
-
-    - title: About Ruby, Gems, Bundler, etc.
-      url: /mydoc_about_ruby_gems_etc/
-      output: web, pdf
-
-    - title: Install Jekyll on Mac
-      url: /mydoc_install_jekyll_on_mac/
-      output: web, pdf
-
-    - title: Install Jekyll on Windows
-      url: /mydoc_install_jekyll_on_windows/
-      output: web, pdf
-
-  - title: Authoring
-    output: web, pdf
-    
-    folderitems:
-    - title: Pages
-      url: /mydoc_pages/
-      output: web, pdf
-
-    - title: Posts
-      url: /mydoc_posts/
-      output: web, pdf
-
-    - title: WebStorm Text Editor
-      url: /mydoc_webstorm_text_editor/
-      output: web, pdf
-
-    - title: Conditional logic
-      url: /mydoc_conditional_logic/
-      output: web, pdf
-
-    - title: Content reuse
-      url: /mydoc_content_reuse/
-      output: web, pdf
-
-    - title: Collections
-      url: /mydoc_collections/
-      output: web, pdf
+      output: web, pdfz
 
   - title: Navigation
     output: web, pdf
-    
+
     folderitems:
     - title: Sidebar navigation
       url: /mydoc_sidebar_navigation/
@@ -114,7 +63,7 @@ entries:
 
   - title: Formatting
     output: web, pdf
-    
+
     folderitems:
     - title: Tooltips
       url: /mydoc_adding_tooltips/
@@ -154,7 +103,7 @@ entries:
 
   - title: Handling reviews
     output: web, pdf
-    
+
     folderitems:
     - title: Commenting on files
       url: /mydoc_commenting_on_files/
@@ -166,7 +115,7 @@ entries:
 
   - title: Publishing
     output: web, pdf
-    
+
     folderitems:
     - title: Build arguments
       url: /mydoc_build_arguments/
@@ -210,7 +159,7 @@ entries:
 
   - title: Special layouts
     output: web, pdf
-    
+
     folderitems:
     - title: Knowledge-base layout
       url: /mydoc_kb_layout/
@@ -226,7 +175,7 @@ entries:
 
   - title: Troubleshooting
     output: web, pdf
-    
+
     folderitems:
 
     - title: Troubleshooting
