--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ exclude:
   - mydoc
 # these are the files and directories that jekyll will exclude from the build
 
-feedback_email: info@eve-corp.com
+feedback_email: info@easytrips.xyz
 # used as a contact email for the Feedback link in the top navigation bar
 
 #feedback_disable: true
