--- a/_data/sidebars/docs_sidebar.yml
+++ b/_data/sidebars/docs_sidebar.yml
@@ -23,4 +23,10 @@ entries:
     - title: Managing Other Users
       url: /user_management/
       output: web
+  - title: Behind the Scenes
+    output: web
+    folderitems:
+    - title: Security
+      url: /features/security
+      output: web
 
