update contact us in header

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ feedback_phone: 360-790-3084
 feedback_email: info@easytrips.xyz
 # used as a contact email for the Feedback link in the top navigation bar
 
-#feedback_disable: true
+feedback_disable: true
 #feedback_text: "Need help?"
 #feedback_link: "http://helpy.io/"
 # change feedback link behaviour if you use a support ticketing system or something else
